<resources>
    <string name="app_name">Quotations</string>
    <string name="t">English Quotations</string>
    <string name="n1">* Sweet is pleasure after pain.</string>
    <string name="n2">* Silence is the most powerful scream.</string>
    <string name="n3">* Love has no age,no limit,and no death.</string>
    <string name="n4">* Love is just love,it can never explained.</string>
    <string name="n5">* You are the defination of my happiness.</string>
    <string name="n6">* You can never be wise unless you love reading.</string>
    <string name="np1">Hello from next page.</string>
    <string name="noneed">ဘုရားႀကီး မိဘမဲ့ ဘုန္းေတာ္ႀကီးသင္ေက်ာင္း
တည္ေနရာ။ ။တံတားဦးကုန္းေက်းရြာ၊တံတားဦးၿမိဳ႕၊မႏၲေလးတိုင္းေဒသႀကီး။

ဆရာေတာ္ ဦးဆႏၵဓိက
ဖုန္း - 09 333 333 74
မိဘမဲ့ ၁၀၀ ဦး၊ကိုရင္ ၂၀ ပါး၊သူငယ္တန္း မွ ၁၀တန္းအထိ၊ဆရာ၊ဆရာမ(၅)ဦး။
တစ္ေန႕တာ ၁ သိန္း ၇ေသာင္း ကုန္က်မည္။ ။

ကုန္းသာကန္ဦး ဘုန္းေတာ္ႀကီးသင္ေက်ာင္း
တည္ေနရာ။ ။တံတိုင္းရွည္(ေတာင္)၊ သာစည္ရြာသစ္၊ပုသိမ္ႀကီးၿမိဳ႕နယ္၊မႏၲေလးတိုင္းေဒသႀကီး။

ဆရာေတာ္ ဦးစႏၵာ၀ရ
ဖုန္း - 09 402 696 461
ဆင္းရဲခ်ိဳ႕တဲ့ ကေလးငယ္ ၅၀၀ ေက်ာ္။သူငယ္တန္း မွ ၇တန္းအထိ၊ဆရာ၊ဆရာမ(၂၀)ဦး။

ဒိုးပင္ မိဘမဲ့ ပရဟိတေက်ာင္း
တည္ေနရာ။ ။မႏၲေလး-ျပင္ဦးလြင္ကားလမ္း၊ ၃၃ မိုင္၊၇ ဖာလံု၊ေအာင္ခ်မ္းသာေစ်း၊မႏၲေလးတိုင္းေဒသႀကီး။

ဆရာေတာ္ ဦးပ႑၀
ဖုန္း - 09 256 071 957
မိဘမဲ့ ၂၀၁၆ဦး၊ကိုရင္ ၁၀ပါး၊သူငယ္တန္း မွ ၇တန္းအထိ၊ ဆရာ၊ဆရာမ(၃၅)ဦး။
တစ္ေန႕တာ ဆန္ ၁၅ အိတ္၊ေငြ ၁၆ သိန္းကုန္က်မည္။ ။

ဗုဒၶဆာယာ ဘုန္းေတာ္ႀကီးသင္ေက်ာင္း
တည္ေနရာ။ ။သာခိုေတာင္ေျခ၊ေရထြက္အုပ္စု၊ပုသိမ္ႀကီးၿမိဳ႕နယ္၊မႏၲေလးတိုင္းေဒသႀကီး။

ဆရာေတာ္ ဦးေသာဘဏ
ဖုန္း - 09 330 619 89
မိဘမဲ့ ၇၈ ဦး။ကိုရင္ ၁၀ ပါး။သူငယ္တန္းမွ ၇တန္းအထိ၊ ဆရာ၊ဆရာမ(၃)ဦး။

ကန္သာဦး ဘုန္းေတာ္ႀကီီးသင္ေက်ာင္း
တည္ေနရာ။ ။ကုန္းသာကန္ဦးရြာ၊ဖက္ပင္အိုင္ ေက်းရြာ၊ျမင္းၿခံၿမိဳ႔နယ္၊မႏၲေလးတိုင္းေဒသႀကီး။

ဆရာေတာ္ ဦးဥတၱမ
ဖုန္း - 09 431 437 67
ဆင္းရဲခ်ိဳ႕တဲ့ ကေလးငယ္ ၈၀ ေက်ာ္။သူငယ္တန္း မွ ၄တန္းအထိ၊ဆရာ၊ဆရာမ(၄)ဦး။

ျပည္ေတာ္သာ ဘုန္းေတာ္ႀကီးသင္ေက်ာင္း
တည္ေနရာ။ ။စဥ့္ကိုင္ၿမိဳ႕၊ျပည္ေတာ္သာေက်ာင္းတို္က္၊မႏၲတိုင္းေဒသႀကီး။
ဆရာေတာ္ ဦးဥတၱမ
ဖုန္း - 09 256 012 892,09 499 999 00
မိဘမဲ့ ၁၀၀ ေက်ာ္။ကိုရင္(၅၀)ပါး။သူငယ္တန္း မွ ၄တန္းအထိ၊ဆရာ၊ဆရာမ(၃)ဦး။
တစ္ေန႕တာ ၁ သိန္း ၅ေသာင္း ကုန္က်မည္။ ။။(၃ႀကိမ္)


အမွတ္(၁၂) စံပယ္ေလးရံု ဘက ေက်ာင္း
တည္ေနရာ။ ။အ/၁၉(ဂ)ရပ္ကြက္၊ေဇာ္ဂ်ီလမ္း၊ကၽြဲဆည္ကန္ကား၀န္းေတာင္ဘက္၊မႏၲေလးတိုင္းေဒသႀကီး။

ဆရာေတာ္ ဦး၀ိမလ
ဖုန္း - 09 910 424 40,09 256 470 341

မိဘမဲ့ ၆၀ဦး၊အနီးအနား(၂၃၀)ဦး(အာဟာရေကၽြး)၊သူငယ္တန္းမွ ၇တန္းထိ၊ဆရာ၊ဆရာမ(၉)ဦး၊
တစ္ေန႕တာ ၂သိန္း ၅ ေသာင္း(၃)ႀကိမ္ ကုန္က်မည္။ ။

ေရွ႕ေဆာင္မ်က္မျမင္ေက်ာင္း
တည္ေနရာ။ ။ႏြားပြဲလမ္း၊ႏြားပြဲေစ်းအနီး၊ၿမိဳ႕သစ္ရပ္၊ေအာင္ဆန္းနယ္ေျမ၊မိတၳီလာၿမိဳ႕၊မႏၲေလးတိုင္းေဒသႀကီး။

ဦးၾကည္
ဖုန္း - 09 430 920 81,064-24108

မိဘမဲ့ မ်က္မျမင္  ၃၈ ဦး။ တစ္ေန႕တာ ၇ေသာင္းက်ပ္(၃ ႀကိမ္) ကုန္က်မည္။ ။</string>
</resources>
